Using data to calculate home and away goal swings for current season

--- a/prem.ipynb
+++ b/prem.ipynb
@@ -188,10 +188,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           HomeTeam       AwayTeam   Odds   OddsType FTR        Date\n",
+      "34        Liverpool  Nott'm Forest  12.00   AwayOdds   A  14/09/2024\n",
+      "108       Tottenham        Ipswich   9.00   AwayOdds   A  10/11/2024\n",
+      "116        Man City      Tottenham   6.00   AwayOdds   A  23/11/2024\n",
+      "119       Newcastle       West Ham   6.00   AwayOdds   A  25/11/2024\n",
+      "91      Bournemouth       Man City   5.50  Home Odds   H  02/11/2024\n",
+      "115          Fulham         Wolves   5.25   AwayOdds   A  23/11/2024\n",
+      "76      Bournemouth        Arsenal   5.00  Home Odds   H  19/10/2024\n",
+      "104        Brighton       Man City   4.10  Home Odds   H  09/11/2024\n",
+      "87   Crystal Palace      Tottenham   3.90  Home Odds   H  27/10/2024\n",
+      "90        Newcastle        Arsenal   3.75  Home Odds   H  02/11/2024\n",
+      "74        Newcastle       Brighton   3.60   AwayOdds   A  19/10/2024\n",
+      "11   Crystal Palace       West Ham   3.20   AwayOdds   A  24/08/2024\n",
+      "63        Leicester    Bournemouth   3.10  Home Odds   H  05/10/2024\n"
+     ]
+    }
+   ],
+   "source": [
+    "upsets = pd.concat([\n",
+    "    home_upsets[['HomeTeam', 'AwayTeam', 'B365H', 'FTR', 'Date']], \n",
+    "    away_upsets[['HomeTeam', 'AwayTeam', 'B365A', 'FTR', 'Date']]\n",
+    "])\n",
+    "\n",
+    "upsets['Odds'] = upsets['B365H'].fillna(upsets['B365A'])\n",
+    "\n",
+    "upsets['OddsType'] = upsets.apply(\n",
+    "    lambda row: 'Home Odds' if pd.notna(row['B365H']) else 'AwayOdds', axis=1\n",
+    ")\n",
+    "\n",
+    "upsets_sorted = upsets.sort_values(by='Odds', ascending=False)\n",
+    "\n",
+    "print(upsets_sorted[['HomeTeam', 'AwayTeam', 'Odds', 'OddsType', 'FTR', 'Date']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Percentage of Matches Where the Favorite Won: 50.00%\n",
+      "Percentage of Matches that Were a Draw: 27.50%\n",
+      "Percentage of Matches Where the Favorite Lost: 22.50%\n"
+     ]
+    }
+   ],
+   "source": [
+    "favourite = data\n",
+    "favourite['Favourite'] = favourite[['B365H', 'B365D', 'B365A']].idxmin(axis=1)\n",
+    "favourite['FavouriteWon'] = ((data['Favourite'] == 'B365H') & (data['FTR'] == 'H')) | \\\n",
+    "                            ((data['Favourite'] == 'B365A') & (data['FTR'] == 'A'))\n",
+    "favourite_win_percentage = (data['FavouriteWon'].sum() / total_matches) * 100\n",
+    "draw_percentage = (data['FTR'] == 'D').sum() / total_matches * 100\n",
+    "favourite_loss_percentage = ((data['FavouriteWon'] == False) & (data['FTR'] != 'D')).sum() /total_matches * 100\n",
+    "print(f\"\\nPercentage of Matches Where the Favorite Won: {favourite_win_percentage:.2f}%\")\n",
+    "print(f\"Percentage of Matches that Were a Draw: {draw_percentage:.2f}%\")\n",
+    "print(f\"Percentage of Matches Where the Favorite Lost: {favourite_loss_percentage:.2f}%\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Goals: 345\n",
+      "Average Goals per Match: 2.88\n",
+      "Total Home Goals: 181\n",
+      "Average Home Goals per Match: 1.51\n",
+      "Total Away Goals: 164\n",
+      "Average Away Goals per Match: 1.37\n",
+      "Imagined average goals each side: 1.44\n",
+      "Fewer away goals scored: 0.07\n",
+      "More home goals scored: 0.07\n",
+      "Total Home Away Goal Swing: 0.14\n"
+     ]
+    }
+   ],
+   "source": [
+    "total_home_goals = data['FTHG'].sum()\n",
+    "total_away_goals = data['FTAG'].sum()\n",
+    "\n",
+    "total_goals = total_home_goals + total_away_goals\n",
+    "\n",
+    "average_home_goals = total_home_goals / total_matches\n",
+    "average_away_goals = total_away_goals / total_matches \n",
+    "average_all_goals = total_goals / total_matches \n",
+    "\n",
+    "print(f\"Total Goals: {total_goals}\")\n",
+    "print(f\"Average Goals per Match: {average_all_goals:.2f}\")\n",
+    "print(f\"Total Home Goals: {total_home_goals}\")\n",
+    "print(f\"Average Home Goals per Match: {average_home_goals:.2f}\")\n",
+    "print(f\"Total Away Goals: {total_away_goals}\")\n",
+    "print(f\"Average Away Goals per Match: {average_away_goals:.2f}\")\n",
+    "print(f\"Imagined average goals each side: {average_all_goals/2:.2f}\")\n",
+    "fewer_scored_away = (average_all_goals/2) - average_away_goals\n",
+    "print(f\"Fewer away goals scored: {fewer_scored_away:.2f}\")\n",
+    "more_scored_home = average_home_goals - (average_all_goals/2)\n",
+    "print(f\"More home goals scored: {more_scored_home:.2f}\")\n",
+    "print(f\"Total Home Away Goal Swing: {more_scored_home + fewer_scored_away:.2f}\")"
+   ]
   }
  ],
  "metadata": {
